# multiplication_in_big_field

./: .gitignore  Cargo.toml  README.md
benches/: mul.rs
examples/: example_2.rs  example_mock.rs  example_random.rs  inputs.in  primes_list.in
src/: lib.rs  utils.rs
src/circuits/: crt_lookup.rs  into_crt.rs  mod.rs  tests.rs  utils.rs
src/crt/: mod.rs  tests.rs
src/crt_int/: mod.rs  tests.rs
src/loading_tables/: circuit.rs  generate_tables.rs  load_tables.rs  mod.rs
src/moduli_precomuted/: mod.rs  tests.rs
src/multiplication_gates/: crt_lookup.rs  crt_to_bits_proof.rs  mod.rs  mod_p_verifications.rs  mod_r_verifications.rs
src/multiplication_gates/tests/: mod.rs  tests_input2.in
src/range_checks/: mod.rs  tests.rs
tests/: tests.rs  tests_input2.in
