[package]
name = "big_field_multiplication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.10"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rustc-hash = "1.1"

rand = { version = "0.8", optional = true }
ff = "0.12"
rayon = "1.6.1"
serde = { version = "=1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.2", optional = true }
bincode = "1.3.3"
ark-std = { version = "0.3.0", features = ["print-trace"], optional = true }
ark-poly = "0.4.0"
ark-ff = "0.4.0"

log = "0.4"
clap = { version = "=4.1", features = ["derive"] }
clap-num = "=1.0.2"
group = "0.12"


halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition"}
# Use Axiom's custom halo2 monorepo for faster proving when feature = "halo2-axiom" is on
halo2_proofs_axiom = { git = "https://github.com/axiom-crypto/halo2.git", branch = "axiom/dev", package = "halo2_proofs", optional = true }
# Geometry's CQ
halo2_proofs = { git = "https://github.com/geometryresearch/halo2-cq.git", branch = "halo2-cq", package = "halo2_proofs", optional = true }


# plotting circuit layout
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

# test-utils

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }
criterion = "0.4"
criterion-macro = "0.4"
rayon = "1.6.1"
test-case = "3.1.0"
proptest = "1.1.0"
rand = "0.8"

# memory allocation
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", optional = true }

mimalloc = { version = "0.1", default-features = false, optional = true }

[features]
default = ["halo2-pse", "halo2_proofs_axiom", "display", "dep:rand"]
dev-graph = ["halo2_proofs?/dev-graph", "halo2_proofs_axiom?/dev-graph", "plotters"]
halo2-pse = ["halo2_proofs"]
halo2-axiom = ["halo2_proofs_axiom"]
display = []
profile = ["halo2_proofs_axiom?/profile"]
#test-utils = ["dep:rand"]
